--- a/Projeto_24_25/reports/report10.html
+++ b/Projeto_24_25/reports/report10.html
@@ -1,243 +1,248 @@
-<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 10 (request from 193.236.198.194) </font></center><br><br>Report finalization date: Mon, 16 Dec 2024 19:44:50 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
-<br>Target server addr: 193.136.128.103 and port: 58067
+<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 10 (request from 194.210.224.148) </font></center><br><br>Report finalization date: Tue, 17 Dec 2024 10:50:45 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
+<br>Target server addr: 193.136.128.104 and port: 58067
 <br>------------------------------------------------------------
-<br>Working dir 0330929/ created
+<br>Working dir 0335278/ created
 <br>
 <br>Command file: script_10.txt
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player > debug 111111 100 R G B Y
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player [111111]> try G Y P P
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 0. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player [111111]> try G Y O O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 0. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player [111111]> try R G B O
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 3. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player [111111]> try G Y P P
 <br>
 <br>Current trial number: 4
 <br>This colour sequence was already used - play ignored (RTR DUP)
 <br>------- Reinput
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player [111111]> show_trials
 <br>
 <br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
 <br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:10 GMT
+<br>at Tue, 17 Dec 2024 10:49:04 GMT
 <br>Player [111111]> sleep 20
 <br>
-<br> Pausing at Mon, 16 Dec 2024 19:43:10 GMT ...
-<br>Resuming at Mon, 16 Dec 2024 19:43:30 GMT
+<br> Pausing at Tue, 17 Dec 2024 10:49:04 GMT ...
+<br>Resuming at Tue, 17 Dec 2024 10:49:24 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
 <br>Player [111111]> try R G B Y
 <br>
 <br>Current trial number: 4
-<br>There is no active game (RTR NOK)
-<br>------- Reinput
+<br>Reported try number: 4
+<br>      Colours in place: 4. Colours off position: 0
+<br>Success - code deciphered
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> show_trials
-<br>
-<br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
-<br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> debug 222222 100 R G B Y
-<br>
-<br>A game is already going on
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> try G Y P P
-<br>
-<br>Current trial number: 4
-<br>There is no active game (RTR NOK)
-<br>------- Reinput
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> try G Y O O
-<br>
-<br>Current trial number: 4
-<br>There is no active game (RTR NOK)
-<br>------- Reinput
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> try R G B O
-<br>
-<br>Current trial number: 4
-<br>There is no active game (RTR NOK)
-<br>------- Reinput
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> try G Y P P
-<br>
-<br>Current trial number: 4
-<br>There is no active game (RTR NOK)
-<br>------- Reinput
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> show_trials
-<br>
-<br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
-<br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:30 GMT
-<br>Player [111111]> sleep 20
-<br>
-<br> Pausing at Mon, 16 Dec 2024 19:43:30 GMT ...
-<br>Resuming at Mon, 16 Dec 2024 19:43:50 GMT
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
-<br>Player [111111]> quit
-<br>
-<br>Quit game error (RQT NOK)
-<br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
 <br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
 <br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player > debug 222222 100 R G B Y
+<br>
+<br>Starting a new game in debug mode (RDB OK)
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player [222222]> try G Y P P
+<br>
+<br>Current trial number: 1
+<br>Reported try number: 1
+<br>      Colours in place: 0. Colours off position: 2
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player [222222]> try G Y O O
+<br>
+<br>Current trial number: 2
+<br>Reported try number: 2
+<br>      Colours in place: 0. Colours off position: 2
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player [222222]> try R G B O
+<br>
+<br>Current trial number: 3
+<br>Reported try number: 3
+<br>      Colours in place: 3. Colours off position: 0
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player [222222]> try G Y P P
+<br>
+<br>Current trial number: 4
+<br>This colour sequence was already used - play ignored (RTR DUP)
+<br>------- Reinput
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player [222222]> show_trials
+<br>
+<br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
+<br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:24 GMT
+<br>Player [222222]> sleep 20
+<br>
+<br> Pausing at Tue, 17 Dec 2024 10:49:24 GMT ...
+<br>Resuming at Tue, 17 Dec 2024 10:49:44 GMT
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
+<br>Player [222222]> quit
+<br>
+<br>Quitting game (RQT OK)
+<br>Game code was: RGBY
+<br>========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
+<br>Player > show_trials
+<br>
+<br>You have no active game. STR will be sent anyway
+<br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
+<br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player > debug 333333 100 R G B Y
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try G Y P P
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 0. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try R Y O O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try R O P Y
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 2. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try R Y G P
 <br>
 <br>Current trial number: 4
 <br>Reported try number: 4
 <br>      Colours in place: 1. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try B G R Y
 <br>
 <br>Current trial number: 5
 <br>Reported try number: 5
 <br>      Colours in place: 2. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try B R Y G
 <br>
 <br>Current trial number: 6
 <br>Reported try number: 6
 <br>      Colours in place: 0. Colours off position: 4
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> try G G G G
 <br>
 <br>Current trial number: 7
 <br>Reported try number: 7
 <br>      Colours in place: 1. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> show_trials
 <br>
 <br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
 <br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:43:50 GMT
+<br>at Tue, 17 Dec 2024 10:49:44 GMT
 <br>Player [333333]> sleep 30
 <br>
-<br> Pausing at Mon, 16 Dec 2024 19:43:50 GMT ...
-<br>Resuming at Mon, 16 Dec 2024 19:44:20 GMT
+<br> Pausing at Tue, 17 Dec 2024 10:49:44 GMT ...
+<br>Resuming at Tue, 17 Dec 2024 10:50:14 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
 <br>Player [333333]> try G Y P P
 <br>
 <br>Current trial number: 8
 <br>This colour sequence was already used - play ignored (RTR DUP)
 <br>------- Reinput
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
 <br>Player [333333]> try B Y R G
 <br>
 <br>Current trial number: 8
 <br>Trial limit reached - game closed (RTR ENT)
 <br>Game code was: RGBY
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
 <br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
 <br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
 <br>Player > debug 444444 20 R G B Y
 <br>
-<br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to DBG
-<br><font size="3" color="black">------- Reinput
+<br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
-<br>Player > try R O O O
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
+<br>Player [444444]> try R O O O
 <br>
-<br>No game active
+<br>Current trial number: 1
+<br>Reported try number: 1
+<br>      Colours in place: 1. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
-<br>Player > try O R O O
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
+<br>Player [444444]> try O R O O
 <br>
-<br>No game active
+<br>Current trial number: 2
+<br>Reported try number: 2
+<br>      Colours in place: 0. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
-<br>Player > show_trials
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
+<br>Player [444444]> show_trials
 <br>
-<br>You have no active game. STR will be sent anyway
 <br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
 <br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:20 GMT
-<br>Player > sleep 30
+<br>at Tue, 17 Dec 2024 10:50:14 GMT
+<br>Player [444444]> sleep 30
 <br>
-<br> Pausing at Mon, 16 Dec 2024 19:44:20 GMT ...
-<br>Resuming at Mon, 16 Dec 2024 19:44:50 GMT
+<br> Pausing at Tue, 17 Dec 2024 10:50:14 GMT ...
+<br>Resuming at Tue, 17 Dec 2024 10:50:44 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:50 GMT
-<br>Player > show_trials
+<br>at Tue, 17 Dec 2024 10:50:44 GMT
+<br>Player [444444]> show_trials
 <br>
-<br>You have no active game. STR will be sent anyway
 <br><font size="3" color="red">FORMAT ERROR:                              Unexpected server response to STR
 <br><font size="3" color="black">========== ========== ========== ========== ========== ========== ==========
-<br>at Mon, 16 Dec 2024 19:44:50 GMT
-<br>Player > exit
+<br>at Tue, 17 Dec 2024 10:50:44 GMT
+<br>Player [444444]> exit
 <br>
+<br>Terminating game for player 444444
 <br>===== ========== ========== ==========END========== ========== ========== =====
 <br></pre><br><br>
