--version 1.5 -> final (falta dar clean à funçao dos ficheiros, mas não quero saber)

--- a/Projeto_24_25/reports/report02.html
+++ b/Projeto_24_25/reports/report02.html
@@ -1,36 +1,36 @@
-<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 2 (request from 194.210.60.144) </font></center><br><br>Report finalization date: Thu, 19 Dec 2024 17:18:05 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
-<br>Target server addr: 193.136.128.103 and port: 58067
+<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 2 (request from 194.210.60.181) </font></center><br><br>Report finalization date: Fri, 20 Dec 2024 15:49:10 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
+<br>Target server addr: 193.136.128.104 and port: 58067
 <br>------------------------------------------------------------
-<br>Working dir 0372573/ created
+<br>Working dir 0406511/ created
 <br>
 <br>Command file: script_02.txt
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:18:05 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player > start 100001 600
 <br>
 <br>Starting a new game (RSG OK)
 <br>You are allowed to try 8 times for code with 4 positions, each: R,G,B,Y,O and P
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:18:05 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player [100001]> quit
 <br>
 <br>Quitting game (RQT OK)
-<br>Game code was: BBYO
+<br>Game code was: BBBO
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:18:05 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player > start 100002 600
 <br>
 <br>Starting a new game (RSG OK)
 <br>You are allowed to try 8 times for code with 4 positions, each: R,G,B,Y,O and P
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:18:05 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player [100002]> quit
 <br>
 <br>Quitting game (RQT OK)
-<br>Game code was: BGOB
+<br>Game code was: OOBG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:18:05 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player > exit
 <br>
 <br>===== ========== ========== ==========END========== ========== ========== =====
