--- a/Projeto_24_25/reports/report22.html
+++ b/Projeto_24_25/reports/report22.html
@@ -1,48 +1,48 @@
-<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 22 (request from 193.236.211.154) </font></center><br><br>Report finalization date: Thu, 19 Dec 2024 20:09:18 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
-<br>Target server addr: 193.136.128.103 and port: 58068
+<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 22 (request from 194.210.60.181) </font></center><br><br>Report finalization date: Fri, 20 Dec 2024 15:59:01 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
+<br>Target server addr: 193.136.128.104 and port: 58067
 <br>------------------------------------------------------------
-<br>Working dir 0377815/ created
+<br>Working dir 0407099/ created
 <br>
 <br>Command file: script_22.txt
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player > debug 100004 100 G P O R
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player [100004]> try R G B Y
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 0. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player [100004]> try B Y P O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 0. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player [100004]> try P O R G
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 0. Colours off position: 4
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player [100004]> show_trials
 <br>
 <br>Trials file: STATE_100004.txt follows (RST ACT), announced size: 40
-<br>Saved to: 0377815/STATE_100004.txt
+<br>Saved to: 0407099/STATE_100004.txt
 <br>R G B Y 0 2
 <br>B Y P O 0 2
 <br>P O R G 0 4
 <br>100
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player [100004]> try G P O R
 <br>
 <br>Current trial number: 4
@@ -50,86 +50,87 @@
 <br>      Colours in place: 4. Colours off position: 0
 <br>Success - code deciphered
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
-<br>Trials file: 20241219_200912_W.txt follows (RST FIN), announced size: 128
-<br>Saved to: 0377815/20241219_200912_W.txt
-<br>100004 D GPOR 100 2024-12-19 20:09:12 1734638952
+<br>Trials file: STATE_100004.txt follows (RST FIN), announced size: 128
+<br>Saved to: 0407099/STATE_100004.txt
+<br>100004 D GPOR 100 2024-12-20 15:58:55 1734710335
 <br>T: RGBY 0 2 0
 <br>T: BYPO 0 2 0
 <br>T: PORG 0 4 0
 <br>T: GPOR 4 0 0
-<br>2024-12-19 20:09:12 0
+<br>2024-12-20 15:58:55 0
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:55 GMT
 <br>Player > sleep 2
 <br>
-<br> Pausing at Thu, 19 Dec 2024 20:09:12 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 20:09:14 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:58:55 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:58:57 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player > scoreboard
 <br>
-<br>Scores file: scores.txt follows (RSS OK), announced size: 216
-<br>Saved to: 0377815/scores.txt
+<br>Scores file: scores.txt follows (RSS OK), announced size: 240
+<br>Saved to: 0407099/scores.txt
+<br>999 200001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
+<br>900 200002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
+<br>800 200003 PORG 3 DEBUG
+<br>800 100003 PORG 3 DEBUG
+<br>700 200004 GPOR 4 DEBUG
 <br>700 100004 GPOR 4 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>400 100007 OOYY 7 DEBUG
-<br>300 100008 OYOY 8 DEBUG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player > debug 100005 100 R R G G
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player [100005]> try R G B Y
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player [100005]> try B Y P O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 0. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player [100005]> try P O R G
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player [100005]> try G P O R
 <br>
 <br>Current trial number: 4
 <br>Reported try number: 4
 <br>      Colours in place: 0. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player [100005]> show_trials
 <br>
 <br>Trials file: STATE_100005.txt follows (RST ACT), announced size: 52
-<br>Saved to: 0377815/STATE_100005.txt
+<br>Saved to: 0407099/STATE_100005.txt
 <br>R G B Y 1 1
 <br>B Y P O 0 0
 <br>P O R G 1 1
 <br>G P O R 0 2
 <br>100
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player [100005]> try R R G G
 <br>
 <br>Current trial number: 5
@@ -137,88 +138,88 @@
 <br>      Colours in place: 4. Colours off position: 0
 <br>Success - code deciphered
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
-<br>Trials file: 20241219_200914_W.txt follows (RST FIN), announced size: 142
-<br>Saved to: 0377815/20241219_200914_W.txt
-<br>100005 D RRGG 100 2024-12-19 20:09:14 1734638954
+<br>Trials file: STATE_100005.txt follows (RST FIN), announced size: 142
+<br>Saved to: 0407099/STATE_100005.txt
+<br>100005 D RRGG 100 2024-12-20 15:58:57 1734710337
 <br>T: RGBY 1 1 0
 <br>T: BYPO 0 0 0
 <br>T: PORG 1 1 0
 <br>T: GPOR 0 2 0
 <br>T: RRGG 4 0 0
-<br>2024-12-19 20:09:14 0
+<br>2024-12-20 15:58:57 0
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:57 GMT
 <br>Player > sleep 2
 <br>
-<br> Pausing at Thu, 19 Dec 2024 20:09:14 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 20:09:16 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:58:57 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:58:59 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player > scoreboard
 <br>
 <br>Scores file: scores.txt follows (RSS OK), announced size: 240
-<br>Saved to: 0377815/scores.txt
+<br>Saved to: 0407099/scores.txt
+<br>999 200001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
+<br>900 200002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
+<br>800 200003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>600 100005 RRGG 5 DEBUG
+<br>700 200004 GPOR 4 DEBUG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player > debug 100006 100 G G R R
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> try R G B Y
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> try B Y P O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 0. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> try P O R G
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> try G P O R
 <br>
 <br>Current trial number: 4
 <br>Reported try number: 4
 <br>      Colours in place: 2. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> try R R G G
 <br>
 <br>Current trial number: 5
 <br>Reported try number: 5
 <br>      Colours in place: 0. Colours off position: 4
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> show_trials
 <br>
 <br>Trials file: STATE_100006.txt follows (RST ACT), announced size: 64
-<br>Saved to: 0377815/STATE_100006.txt
+<br>Saved to: 0407099/STATE_100006.txt
 <br>R G B Y 1 1
 <br>B Y P O 0 0
 <br>P O R G 1 1
@@ -226,7 +227,7 @@
 <br>R R G G 0 4
 <br>100
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player [100006]> try G G R R
 <br>
 <br>Current trial number: 6
@@ -234,45 +235,45 @@
 <br>      Colours in place: 4. Colours off position: 0
 <br>Success - code deciphered
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
-<br>Trials file: 20241219_200916_W.txt follows (RST FIN), announced size: 156
-<br>Saved to: 0377815/20241219_200916_W.txt
-<br>100006 D GGRR 100 2024-12-19 20:09:16 1734638956
+<br>Trials file: STATE_100006.txt follows (RST FIN), announced size: 156
+<br>Saved to: 0407099/STATE_100006.txt
+<br>100006 D GGRR 100 2024-12-20 15:58:59 1734710339
 <br>T: RGBY 1 1 0
 <br>T: BYPO 0 0 0
 <br>T: PORG 1 1 0
 <br>T: GPOR 2 0 0
 <br>T: RRGG 0 4 0
 <br>T: GGRR 4 0 0
-<br>2024-12-19 20:09:16 0
+<br>2024-12-20 15:58:59 0
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:58:59 GMT
 <br>Player > sleep 2
 <br>
-<br> Pausing at Thu, 19 Dec 2024 20:09:16 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 20:09:18 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:58:59 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:59:01 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:18 GMT
+<br>at Fri, 20 Dec 2024 15:59:01 GMT
 <br>Player > scoreboard
 <br>
 <br>Scores file: scores.txt follows (RSS OK), announced size: 240
-<br>Saved to: 0377815/scores.txt
+<br>Saved to: 0407099/scores.txt
+<br>999 200001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
+<br>900 200002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
+<br>800 200003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>600 100005 RRGG 5 DEBUG
+<br>700 200004 GPOR 4 DEBUG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:18 GMT
+<br>at Fri, 20 Dec 2024 15:59:01 GMT
 <br>Player > exit
 <br>
 <br>===== ========== ========== ==========END========== ========== ========== =====
