--- a/Projeto_24_25/reports/report05.html
+++ b/Projeto_24_25/reports/report05.html
@@ -1,42 +1,41 @@
-<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 5 (request from 194.210.60.144) </font></center><br><br>Report finalization date: Thu, 19 Dec 2024 17:20:22 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
-<br>Target server addr: 193.136.128.103 and port: 58067
+<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 5 (request from 194.210.60.181) </font></center><br><br>Report finalization date: Fri, 20 Dec 2024 15:49:40 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
+<br>Target server addr: 193.136.128.104 and port: 58067
 <br>------------------------------------------------------------
-<br>Working dir 0372632/ created
+<br>Working dir 0406532/ created
 <br>
 <br>Command file: script_05.txt
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:19:52 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player > start 100001 20
 <br>
 <br>Starting a new game (RSG OK)
 <br>You are allowed to try 8 times for code with 4 positions, each: R,G,B,Y,O and P
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:19:52 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player [100001]> quit
 <br>
 <br>Quitting game (RQT OK)
-<br>Game code was: POGG
+<br>Game code was: GYYY
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:19:52 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player > start 100001 20
 <br>
 <br>Starting a new game (RSG OK)
 <br>You are allowed to try 8 times for code with 4 positions, each: R,G,B,Y,O and P
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:19:52 GMT
+<br>at Fri, 20 Dec 2024 15:49:10 GMT
 <br>Player [100001]> sleep 30
 <br>
-<br> Pausing at Thu, 19 Dec 2024 17:19:52 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 17:20:22 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:49:10 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:49:40 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:20:22 GMT
+<br>at Fri, 20 Dec 2024 15:49:40 GMT
 <br>Player [100001]> quit
 <br>
-<br>Quitting game (RQT OK)
-<br>Game code was: RPGG
+<br>Quit game error (RQT NOK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 17:20:22 GMT
+<br>at Fri, 20 Dec 2024 15:49:40 GMT
 <br>Player > exit
 <br>
 <br>===== ========== ========== ==========END========== ========== ========== =====
