--- a/Projeto_24_25/reports/report24.html
+++ b/Projeto_24_25/reports/report24.html
@@ -1,92 +1,92 @@
-<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 24 (request from 193.236.211.154) </font></center><br><br>Report finalization date: Thu, 19 Dec 2024 20:09:18 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
-<br>Target server addr: 193.136.128.103 and port: 58068
+<pre><center><font size="10" color="blue"> --------- TEST RESULTS --------- </font></center><br><br><center><font size="5" color="blue"> SCRIPT: 24 (request from 194.210.60.181) </font></center><br><br>Report finalization date: Fri, 20 Dec 2024 15:59:02 GMT<br><br><br><br><center><font size="5" color="blue"> ============ PLAYER REPORT =========== </font></center><br><br><br>------------------------------------------------------------
+<br>Target server addr: 193.136.128.104 and port: 58067
 <br>------------------------------------------------------------
-<br>Working dir 0377821/ created
+<br>Working dir 0407109/ created
 <br>
 <br>Command file: script_24.txt
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:12 GMT
+<br>at Fri, 20 Dec 2024 15:58:56 GMT
 <br>Player > sleep 2
 <br>
-<br> Pausing at Thu, 19 Dec 2024 20:09:12 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 20:09:14 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:58:56 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:58:58 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player > scoreboard
 <br>
 <br>Scores file: scores.txt follows (RSS OK), announced size: 240
-<br>Saved to: 0377821/scores.txt
+<br>Saved to: 0407109/scores.txt
+<br>999 200001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
+<br>900 200002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
+<br>800 200003 PORG 3 DEBUG
+<br>800 100003 PORG 3 DEBUG
+<br>700 200004 GPOR 4 DEBUG
 <br>700 100004 GPOR 4 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>400 100007 OOYY 7 DEBUG
-<br>300 100008 OYOY 8 DEBUG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player > debug 100010 100 O Y O Y
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try R G B Y
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 1. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try B Y P O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try P O R G
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 0. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try G P O R
 <br>
 <br>Current trial number: 4
 <br>Reported try number: 4
 <br>      Colours in place: 1. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try R R G G
 <br>
 <br>Current trial number: 5
 <br>Reported try number: 5
 <br>      Colours in place: 0. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try G G R R
 <br>
 <br>Current trial number: 6
 <br>Reported try number: 6
 <br>      Colours in place: 0. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try O O Y Y
 <br>
 <br>Current trial number: 7
 <br>Reported try number: 7
 <br>      Colours in place: 2. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> show_trials
 <br>
 <br>Trials file: STATE_100010.txt follows (RST ACT), announced size: 88
-<br>Saved to: 0377821/STATE_100010.txt
+<br>Saved to: 0407109/STATE_100010.txt
 <br>R G B Y 1 0
 <br>B Y P O 1 1
 <br>P O R G 0 1
@@ -96,7 +96,7 @@
 <br>O O Y Y 2 2
 <br>100
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player [100010]> try O Y O Y
 <br>
 <br>Current trial number: 8
@@ -104,13 +104,13 @@
 <br>      Colours in place: 4. Colours off position: 0
 <br>Success - code deciphered
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
-<br>Trials file: 20241219_200914_W.txt follows (RST FIN), announced size: 184
-<br>Saved to: 0377821/20241219_200914_W.txt
-<br>100010 D OYOY 100 2024-12-19 20:09:14 1734638954
+<br>Trials file: STATE_100010.txt follows (RST FIN), announced size: 184
+<br>Saved to: 0407109/STATE_100010.txt
+<br>100010 D OYOY 100 2024-12-20 15:58:58 1734710338
 <br>T: RGBY 1 0 0
 <br>T: BYPO 1 1 0
 <br>T: PORG 0 1 0
@@ -119,90 +119,90 @@
 <br>T: GGRR 0 0 0
 <br>T: OOYY 2 2 0
 <br>T: OYOY 4 0 0
-<br>2024-12-19 20:09:14 0
+<br>2024-12-20 15:58:58 0
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:14 GMT
+<br>at Fri, 20 Dec 2024 15:58:58 GMT
 <br>Player > sleep 2
 <br>
-<br> Pausing at Thu, 19 Dec 2024 20:09:14 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 20:09:16 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:58:58 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:59:00 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player > scoreboard
 <br>
 <br>Scores file: scores.txt follows (RSS OK), announced size: 240
-<br>Saved to: 0377821/scores.txt
+<br>Saved to: 0407109/scores.txt
+<br>999 200001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
+<br>900 200002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
+<br>800 200003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>600 100005 RRGG 5 DEBUG
+<br>700 200004 GPOR 4 DEBUG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player > debug 100011 100 O Y O Y
 <br>
 <br>Starting a new game in debug mode (RDB OK)
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try R G B Y
 <br>
 <br>Current trial number: 1
 <br>Reported try number: 1
 <br>      Colours in place: 1. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try B Y P O
 <br>
 <br>Current trial number: 2
 <br>Reported try number: 2
 <br>      Colours in place: 1. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try P O R G
 <br>
 <br>Current trial number: 3
 <br>Reported try number: 3
 <br>      Colours in place: 0. Colours off position: 1
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try G P O R
 <br>
 <br>Current trial number: 4
 <br>Reported try number: 4
 <br>      Colours in place: 1. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try R R G G
 <br>
 <br>Current trial number: 5
 <br>Reported try number: 5
 <br>      Colours in place: 0. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try G G R R
 <br>
 <br>Current trial number: 6
 <br>Reported try number: 6
 <br>      Colours in place: 0. Colours off position: 0
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try O O Y Y
 <br>
 <br>Current trial number: 7
 <br>Reported try number: 7
 <br>      Colours in place: 2. Colours off position: 2
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> show_trials
 <br>
 <br>Trials file: STATE_100011.txt follows (RST ACT), announced size: 88
-<br>Saved to: 0377821/STATE_100011.txt
+<br>Saved to: 0407109/STATE_100011.txt
 <br>R G B Y 1 0
 <br>B Y P O 1 1
 <br>P O R G 0 1
@@ -212,7 +212,7 @@
 <br>O O Y Y 2 2
 <br>100
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player [100011]> try O Y O Y
 <br>
 <br>Current trial number: 8
@@ -220,13 +220,13 @@
 <br>      Colours in place: 4. Colours off position: 0
 <br>Success - code deciphered
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player > show_trials
 <br>
 <br>You have no active game. STR will be sent anyway
-<br>Trials file: 20241219_200916_W.txt follows (RST FIN), announced size: 184
-<br>Saved to: 0377821/20241219_200916_W.txt
-<br>100011 D OYOY 100 2024-12-19 20:09:16 1734638956
+<br>Trials file: STATE_100011.txt follows (RST FIN), announced size: 184
+<br>Saved to: 0407109/STATE_100011.txt
+<br>100011 D OYOY 100 2024-12-20 15:59:00 1734710340
 <br>T: RGBY 1 0 0
 <br>T: BYPO 1 1 0
 <br>T: PORG 0 1 0
@@ -235,32 +235,32 @@
 <br>T: GGRR 0 0 0
 <br>T: OOYY 2 2 0
 <br>T: OYOY 4 0 0
-<br>2024-12-19 20:09:16 0
+<br>2024-12-20 15:59:00 0
 <br>
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:16 GMT
+<br>at Fri, 20 Dec 2024 15:59:00 GMT
 <br>Player > sleep 2
 <br>
-<br> Pausing at Thu, 19 Dec 2024 20:09:16 GMT ...
-<br>Resuming at Thu, 19 Dec 2024 20:09:18 GMT
+<br> Pausing at Fri, 20 Dec 2024 15:59:00 GMT ...
+<br>Resuming at Fri, 20 Dec 2024 15:59:02 GMT
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:18 GMT
+<br>at Fri, 20 Dec 2024 15:59:02 GMT
 <br>Player > scoreboard
 <br>
 <br>Scores file: scores.txt follows (RSS OK), announced size: 240
-<br>Saved to: 0377821/scores.txt
+<br>Saved to: 0407109/scores.txt
+<br>999 200001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
 <br>999 100001 RGBY 1 DEBUG
+<br>900 200002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
 <br>900 100002 BYPO 2 DEBUG
+<br>800 200003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
 <br>800 100003 PORG 3 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>700 100004 GPOR 4 DEBUG
-<br>600 100005 RRGG 5 DEBUG
-<br>600 100005 RRGG 5 DEBUG
+<br>700 200004 GPOR 4 DEBUG
 <br>========== ========== ========== ========== ========== ========== ==========
-<br>at Thu, 19 Dec 2024 20:09:18 GMT
+<br>at Fri, 20 Dec 2024 15:59:02 GMT
 <br>Player > exit
 <br>
 <br>===== ========== ========== ==========END========== ========== ========== =====
